# simsti

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  build.zig  rtrrecv.cpp  rtrrecv.hpp  simsti.cpp  simsti.hpp  sti.hpp  vcpkg.json  xmake.lua
go/: simsti.go
